melhorando barra de atualização

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
             <i>Autor</i>
         </div>
         <div class="duracao">
-            <div class="barra">
-                <progress class="time-bar" value="0" max="1"></progress>
-                <div class="ponto"></div>
-            </div>
+            <input type="range" min="0" max="1" class="barra">
             <div class="tempo">
                 <p class="inicio">0.00</p>
                 <p class="fim">0.00</p>
